# bazel-dep-ape

./: .gitlab-ci.yml  BUILD.bazel  CHANGELOG.md  CODEOWNERS  README.md  binaries.bzl
.reuse/: dep5
LICENSES/: MIT.txt
ape/: MODULE.bazel
ape/ape/: BUILD.bazel  assimilate  assimilate_wrapper.sh  tar  tar_wrapper.sh  unzip
ape/assimilate/: BUILD.bazel  rule.bzl
ape/binary/: BUILD.bazel  defs.bzl  nt.tmpl.bat  posix.tmpl.sh  readlink.go  rule.bzl
ape/compile/: BUILD.tmpl.bazel  repository.bzl
ape/entrypoint/: repository.bzl
ape/pe/: repository.bzl
ape/test/: BUILD.bazel  bash.tmpl.sh  nt.tmpl.bat  rule.bzl
ape/toolchain/ape/: BUILD.bazel
ape/toolchain/info/: BUILD.bazel
e2e/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/symlink/: BUILD.bazel
e2e/symlink/test/: rule.bzl
upload/: BUILD.bazel
