module(
    name = "e2e",
    bazel_compatibility = [
        ">=7.0.0",
    ],
)

bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

bazel_dep(name = "toolchain_utils", version = "1.0.0-beta.18")
bazel_dep(name = "ape", version = "0.0.0")
local_path_override(
    module_name = "ape",
    path = "..",
)

export = use_extension("@toolchain_utils//toolchain/export:defs.bzl", "toolchain_export")
use_repo(export, "ape-curl")

resolved = use_repo_rule("@toolchain_utils//toolchain/resolved:defs.bzl", "toolchain_resolved")

resolved(
    name = "resolved-curl",
    toolchain_type = "//toolchain/curl:type",
)

resolved(
    name = "resolved-install",
    toolchain_type = "//toolchain/install:type",
)

register_toolchains("//toolchain/...")
