sh_binary(
    name = "unzip",
    srcs = ["unzip_wrapper.sh"],
    data = ["unzip"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tar",
    srcs = ["tar_wrapper.sh"],
    data = ["tar"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "assimilate",
    srcs = ["assimilate_wrapper.sh"],
    data = ["assimilate"],
    visibility = ["//visibility:public"],
)
