load("//ape/test:rule.bzl", "test")

exports_files([
    "nt.tmpl.bat",
    "bash.tmpl.sh",
])

alias(
    name = "template",
    actual = select({
        "@toolchain_utils//toolchain/constraint/os:windows": ":nt.tmpl.bat",
        "//conditions:default": ":bash.tmpl.sh",
    }),
    visibility = ["//ape:__subpackages__"],
)

# TODO: test commented binaries
[
    test(
        name = binary,
        size = "small",
        arguments = arguments,
        target = "//ape:{}".format(binary),
    )
    for binary, arguments in {
        "assimilate": ["-v"],
        "awk": ["--version"],
        "b2sum": ["--version"],
        "base32": ["--version"],
        "base64": ["--version"],
        "basename": ["--version"],
        "basenc": ["--version"],
        "bash": ["--version"],
        # "berry": ["--version"],
        "brotli": ["--version"],
        "bzip2": ["--version"],
        "cat": ["--version"],
        "chcon": ["--version"],
        "chgrp": ["--version"],
        "chown": ["--version"],
        "chroot": ["--version"],
        "cksum": ["--version"],
        "clang-format": ["--version"],
        "cmp": ["--version"],
        "comm": ["--version"],
        "cp": ["--version"],
        "csplit": ["--version"],
        "ctags": ["--version"],
        "curl": ["--version"],
        "cut": ["--version"],
        # "dash": ["-c", "exit"],
        "datasette": ["--version"],
        "date": ["--version"],
        "dd": ["--version"],
        "df": ["--version"],
        "diff": ["--version"],
        "diff3": ["--version"],
        "dir": ["--version"],
        "dircolors": ["--version"],
        "dirname": ["--version"],
        "du": ["--version"],
        "echo": ["--version"],
        # "emacs": ["--version"],
        "emacsclient": ["--version"],
        "env": ["--version"],
        "expand": ["--version"],
        "expr": ["--version"],
        "factor": ["--version"],
        # "false": ["--version"],
        "find": ["--version"],
        "fmt": ["--version"],
        "fold": ["--version"],
        "gmake": ["--version"],
        # "greenbean": ["--help"],
        "grep": ["--version"],
        "groups": ["--version"],
        "gzip": ["--version"],
        "head": ["--version"],
        "id": ["--version"],
        "install": ["--version"],
        "join": ["--version"],
        "kill": ["--version"],
        "less": ["--version"],
        "life": ["--version"],
        "link": ["--version"],
        "ln": ["--version"],
        "locate": ["--version"],
        "logname": ["--version"],
        "ls": ["--version"],
        "lua": ["-v"],
        "make": ["--version"],
        "md5sum": ["--version"],
        "mkdir": ["--version"],
        "mkfifo": ["--version"],
        "mknod": ["--version"],
        "mktemp": ["--version"],
        "mktemper": ["test-XXXXXXXXXXXXX"],
        "mv": ["--version"],
        "nano": ["--version"],
        "nesemu1": ["--version"],
        "nice": ["--version"],
        "ninja": ["--version"],
        "nl": ["--version"],
        "nohup": ["--version"],
        "nproc": ["--version"],
        "numfmt": ["--version"],
        "od": ["--version"],
        "paste": ["--version"],
        "patch": ["--version"],
        "pathchk": ["--version"],
        "pigz": ["--version"],
        "pinky": ["--version"],
        "pledge": ["--version"],
        "pr": ["--version"],
        "printenv": ["--version"],
        "printf": ["--version"],
        "printimage": ["-?"],
        "ptx": ["--version"],
        "pwd": ["--version"],
        "python": ["--version"],
        "qjs": ["--quit"],
        "readlink": ["--version"],
        "realpath": ["--version"],
        # "redbean": ["--help"],
        "rm": ["--version"],
        "rmdir": ["--version"],
        "rsync": ["--version"],
        "runcon": ["--version"],
        # "script": ["--version"],
        "sdiff": ["--version"],
        "sed": ["--version"],
        "seq": ["--version"],
        "sha1sum": ["--version"],
        "sha224sum": ["--version"],
        "sha256sum": ["--version"],
        "sha384sum": ["--version"],
        "sha512sum": ["--version"],
        "shred": ["--version"],
        "shuf": ["--version"],
        "sleep": ["--version"],
        "sort": ["--version"],
        "split": ["--version"],
        "sqlite3": ["--version"],
        "stat": ["--version"],
        "stty": ["--version"],
        "sum": ["--version"],
        "sync": ["--version"],
        "tac": ["--version"],
        "tail": ["--version"],
        "tar": ["--version"],
        "tee": ["--version"],
        "test": ["--version"],
        "tidy": ["--version"],
        "timeout": ["--version"],
        "tmux": ["-V"],
        "touch": ["--version"],
        "tr": ["--version"],
        "tree": ["--version"],
        "true": ["--version"],
        "truncate": ["--version"],
        "tsort": ["--version"],
        "tty": ["--version"],
        # "ttyinfo": ["--version"],
        "uname": ["--version"],
        # "unbourne": ["--version"],
        "unexpand": ["--version"],
        "uniq": ["--version"],
        "unlink": ["--version"],
        "unzip": ["--help"],
        "uptime": ["--version"],
        "users": ["--version"],
        "vdir": ["--version"],
        # "verynice": ["--version"],
        "vim": ["--version"],
        "wall": ["--version"],
        "wc": ["--version"],
        "wget": ["--version"],
        "who": ["--version"],
        "whoami": ["--version"],
        "xargs": ["--version"],
        "xz": ["--version"],
        "yes": ["--version"],
        "zip": ["--version"],
        "zsh": ["--version"],
        "zstd": ["--version"],
    }.items()
]
